Texture Painting in Blender 2.72a #42281

Closed
opened 2014-10-17 22:47:27 +02:00 by Michele Serpe · 11 comments

Windows 7 - Geforce GTX 580

Blender version: 2.72a

Texture painting crashes Blender

Open Blender
Subdivide a cube two times
Add Subdivision Surface at "2"
Smooth Shading added
Enter in Texture Painting
Immediate Crash

Windows 7 - Geforce GTX 580 Blender version: 2.72a Texture painting crashes Blender Open Blender Subdivide a cube two times Add Subdivision Surface at "2" Smooth Shading added Enter in Texture Painting Immediate Crash
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @airsnake

Added subscriber: @airsnake

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Bah... :/
Regression in 2.72a, 2.72 itself was fine.

Edit: Add Subsurf 2 -> Go to Texture Paint Mode is sufficient for the crash.

Bah... :/ Regression in 2.72a, 2.72 itself was fine. Edit: Add Subsurf 2 -> Go to Texture Paint Mode is sufficient for the crash.
Antonis Ryakiotakis was assigned by Thomas Dinges 2014-10-18 01:52:23 +02:00

Added subscriber: @AditiaA.Pratama

Added subscriber: @AditiaA.Pratama

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

Crash in Linux too with 2.72a.

Opensuse 13.1/64
Intel i5 3770K
GTX 760 4 GB (Display)
GTX 560Ti 1.28 GB 448 Cores
Driver 343.19

Cheers, mib

Crash in Linux too with 2.72a. Opensuse 13.1/64 Intel i5 3770K GTX 760 4 GB (Display) GTX 560Ti 1.28 GB 448 Cores Driver 343.19 Cheers, mib

This issue was referenced by 3a961d66ef

This issue was referenced by 3a961d66ef189f70cfcd16338b4dc14b82d6bb00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3a961d66ef.

Closed by commit 3a961d66ef.

This issue was referenced by e8fd23b602

This issue was referenced by e8fd23b602d5f46aa47b4427710a78a053df2ad6
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42281
No description provided.