Fix T42281, crash in subsurf with texture painting.